[tool.poetry]
name = "pymoof"
version = "0.0.3"
description = "Connect to your Vanomof S3/X3 bike"
authors = ["Henri Bai <quantsini@gmail.com>"]
license = "MIT"
homepage = "https://github.com/quantsini/pymoof"
repository = "https://github.com/quantsini/pymoof"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.27.1"
bleak = "^0.14.2"
cryptography = "^36.0.1"
coverage = "^6.3"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.17.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipdb = "^0.13.9"
pre-commit = "^2.17.0"
tox = "^3.24.5"

[tool.tox]
legacy_tox_ini="""
[tox]
isolated_build = True
envlist = py39

[testenv]
deps = pytest
commands =
    coverage run -m pytest {posargs:tests}
    coverage report --fail-under=95 -m
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
