[metadata]
name = pymoof
version = 0.0.2
author = Henri Bai
author_email = quantsini@gmail.com
description = Connect to your vanmoof bike
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantsini/pymoof
project_urls =
    Bug Tracker = https://github.com/quantsini/pymoof/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    cryptography
    bleak

[options.packages.find]
where = src
